src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_b__tests__shamsa_160x50.snap
---
source: src/modes/_101_p02_glm53f_max_b.rs
assertion_line: 1005
expression: "text(&frame(160, 50, 42, 0.0, &knobs()))"
---
                                                                      ,,,,,,,,,,,,,,,,,,,,                                                                      
                                                              ,,,,,,,, =/-=((=====------- ,,,,,,                                                                
                                   `````                 ,,,,,.=======/---(==(=====---------\\===             `````                                             
                                   `````             ,,,,,///----=========(=='======================/=        `````                                             
                                                  ,,,,//////==============(==oo=====================\\\\\\                                                      
                                               ,,,,(=|//====#############==,==o=========================\\===                                                   
                                             ,,,====,====##################,#===================================                                                
                                           ,,,/======,===##################,######===============================\                                              
                                         ,,.////====,,(#))########,,,))))),#######=======================o======\\\\    `````                                   
                                       ,,,////======,oo)##)######(####OOO###########======OO=============o========\\==   ````                                   
                                     .,,=///========,,)))#)##########################===================================  .                                     
                                    ..,==/=========,#,##)#)#####################--####=================================== ..                                    
                                   ..==============,#)##)#'#####################-/######===============================\\\-..                                   
                                 ...===============,=)))##,,###///#########/\-!!!!;;\-##=================================\\\...                                 
                                ...///=============,####,,'#(/////|||lllliiii/----!!;;;i!-|\==\\==========O===============\\\...                                
                                ..///==========(('=,=##,##,#((//illlllll--//########\|iii!!!!;;-==========O===================..                                
                               ..=============(==='OO=#,##,##(/iil|||#####//##########\\####\\;;\==============================..      `````                    
                              ..==============(===(===#,##,##(iii|#########\/########|\#####=#\;;;=====================o========..     `````                    
                             ..,====((''=======((((====,##,#|(ii|#############################=//;;,|==================o=======- ..              `````          
                             ..====(===oo==============)##,il(|#||||##########################==||,,,||=======================|||..              `````          
                            ..,|||=(================)==)\\((\(#####/######o**********o#######-|//=//,,,,||||==================||| ..                            
                            ..|||===(===============)-|)!!i-(###########*o************o*#######=====/,,,--=====================|||..                            
               `````        ..|||===(===============)==)!!-###########*********oo*********####======/,,,\======================||=..                            
               `````        ..=||====,,============))))/;!--#########oo******@@@@@@******oo##=======/,,,\=========================..                            
          `````             ..=========,,====((==,,=====;;!-----|####*****o@@@@@@@@@@o*****#=========\,,========OOO===============..                            
          `````               ==========,===(OO==,======::\##########*****o@@@@@@@@@@o*****#===|-----:::|=========================,,                            
                              ==========)==='====(=====\,,:/===######oo******@@@@@@******oo=========--::/======================||\,,                            
                              =||=======)==='=====(====\,,,/=====#####*********oo*********===========-::/======================|||,,                            
                              ||,,,,))))=====,====(===--,,,/=====#######*o************o*============-::::||-===================|||,,                            
                              .=(============,====,===|||,,,//=//|-=====##o**********o======/=====\\::::||||==================|||,,,                            
                               =======oo====,====,========/,,,||============================||||=|::::\==\\===================|||,,                             
                               .((,,,,))))))=====,==========\..//==============================|...:|========================/||,,,                             
                                (================)===========\...\=======\|========/\=========|...====================oo========,,                              
                                 |||=============)============-...\\====\\==========//=====|||../==============================,,                               
                    `````         \\\=============)OO==========-..........|\========//--.......-==============================,,                                
                    `````          \\\========================-\\\\\\\........----/..........///=========OO===============//\,,,                                
                                    -\\========================\\|=========--\....-\=========|///========================///,,,                                 
                                     ==========================================/=======================================////,,                                   
                                      .================================================================================//,,,                                    
                                      ..=|\\============================================================================,,,                                     
                                       ...\\\\========================OO===============OO=========================/===,,,                                       
                                         ...\\\\========oo==============================================oo======///= ,,                                         
                                           ...\\\\=======================================================)======//,,,                                           
                                             ...\\============================================(((,,,'''))=======,,,                                             
                         `````                 ....===========================o===============(=========/====,,,,                                               
                         `````                    ....===\\\=================oo===============(====,,,)///,,,,                                                  
`````                                                .....\\\---==============================-((,,///,,,,,                                                     
`````                                                    ......=======----=========------======== ,,,,,                                                         
     `````                                                    ..      .=\-========----/==.      ,,                                                              
     `````
