src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_b__tests__shamsa_30x12.snap
---
source: src/modes/_101_p02_glm53f_max_b.rs
assertion_line: 1010
expression: "text(&frame(30, 12, 42, 0.0, &knobs()))"
---
                              
          ,-=======           
     (('==##OO##OO====        
     ,='=######/#===O==\.     
     ,=(OO#i######;=O===|     
    .,=O==-##****#=,=OO==.    
     )=OO=,=#****==-=====,    
     |))OO=.======.=====|     
      \=(=====/====OO==/,     
       .(===OO==OO====,       
          .-======-
