src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_b__tests__shamsa_80x24.snap
---
source: src/modes/_101_p02_glm53f_max_b.rs
assertion_line: 799
expression: "text(&frame(80, 24, 42, 0.0, &knobs()))"
---
                     ```````                                                    
                     ```````  /=====---------=====                              
                     ``````////==================\\\\                           
                        ////==##########============\\\\                        
                      ///===#######OO####==============\==                      
                    ==/====################=OO==============                    
```````            ========############-!/##==============\\\                   
```````           //======OO####/lllli/##-|i!!;====OO=======\\                  
```````          |||======OO###/i|####/###\##=\;============|||                 
                 ||==========#il#|############=|,,===========||                 
                |||=========/!-#####********###==/,==========||=                
                =============!-####***@@@@***#===\,===OO========                
              ``========O====:\####***@@@@***====-:===========|=                
              ``=||=========-,/==###********=====-:|-========|||                
              ```||===========,,|=============|=::\\=========||                 
                 |||===========\.\===\===/====|.============|||                 
                  \\======OO====-....|-==/.....====OO=======//                  
                   ==\=================/-=================///                   
                    ========================================                    
                      =\\==========OO======OO==========/==                      
                        \\\\========================////                        
                           \\\\==================////                           
                              \====\--------====-/
