src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_b__tests__shamsa_80x24_lantern45.snap
---
source: src/modes/_101_p02_glm53f_max_b.rs
assertion_line: 1030
expression: "text(&frame(80, 24, 42, 0.0, &b))"
---
                                                                                
                              ,,,===---------==                                 
                           ,,/,,,,####===========\\                             
                       ((///##(##,#######===========\\\                         
                      ,(/(#######,#OO#####=============\=                       
                    .=/(=(#######,#########=OO=============.                    
                   .====('##,,,,),#####-;/##==============\\.                   
                  ./=====(OO####)i)ii!/##-|!!!;====OO=======\.                  
                 .||======OO###/)|#)##/###\##=\;============||.                 
                 .|==========#ii)|)###########=|,,===========|.                 
                .||=====(===/!-##))#********##===/,==========||.                
                .====(((,====;-####***@@@@***====\,===OO=======.                
                 ===,,==O====,\=###***@@@@***====-:===========|,                
                 |),====,===-,/===##********=====-:|-========||,                
                  |=====)=====,,|=============|=::\\=========|,                 
                  ||====)======\.\===\===/====|.============||,                 
                   \=====)OO====-....|-==/.....====OO=======/,                  
                    =\=================/-=================//,                   
                     ======================================,                    
                      .\\==========OO======OO==========/=,                      
                        .\\\========================///,                        
                           ..\\==================// ,                           
               `````          ...==\--------===,,,                              
               `````
