src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_b__tests__shamsa_80x24_t14.snap
---
source: src/modes/_101_p02_glm53f_max_b.rs
assertion_line: 1000
expression: "text(&frame(80, 24, 42, 14.0, &knobs()))"
---
                                                                                
                                 --(----==-----...                              
                           , =/==((=(============\\ .                           
                       ,,///====(==='===============\==.                        
                      ,,/==(((==(===OOO================\-,                      
                    ,//,=='=====(===============O========\\,                    
                   ,=/=)=='=OOO==((==,,,,,==-=============\\,                   
                  ,====)=,========/,,:/==,|,,,==============\,                  
                 ,||===)=,=====..|====/===)===\:\===========||,                 
                 ,|=====)=====..=|========)====|:::-=OO======|,                 
                ,||===((OO===,-===#)********=====/:============,                
                ,|====(====|,:-##,,***@@@@***====\.===========|,                
                ,|====(=====|:\##,#***@@@@***#===-./==========|,                
                ,||====(,====\/##,##********##===-.===OO=====||,                
                 .======,,==##ll,#############|=..===========|,                 
                 .=|=====OO####\+,###\###/###=|,.===========||,                 
                  .\======)######,lll|-##/;::/==============/,                  
                   .\\====#)###O#(/\####//--=====OOO========                    
                    .\\====)##OO###########==============//                     
                      .=\===)##########OOO=============//                       
                         =\\,########================-=                         
                            ,\\==================//.                            
               `````             ---===--------...                              
               `````
