src/modes/snapshots/ascii_renderer__modes___101_p02_glm53f_max_b__tests__shamsa_80x24_t6.snap
---
source: src/modes/_101_p02_glm53f_max_b.rs
assertion_line: 995
expression: "text(&frame(80, 24, 42, 6.0, &knobs()))"
---
                                                                                
                              ,,,-----===------                                 
                           , //==================\=                             
                        ,===========================\\\.                        
                      ,//==(('==========OOO============\\.                      
                    ,//==((=='===========================\\.                    
                   ,//====(===OO,,,,,=====\======OO=======\\.                   
                  ,/((====(===,,==,.,./==-|!!-###########====.                  
                 ,,(==,=((=(((/,,,==)=/###\###\ii-#########===,                 
                ,,====,=OOO==/,,)|==)##########|il####OO####=|,                 
                .=|===,======|-=)===********#####/+#########=||,                
                .|====)======:-==))***@@@@***####\++|#######==|,                
                .|====)====-::\====***@@@@***####-+\#######===|,                
                .||====)OO===\/=====********#####-|#####=====||,                
                 .|====(======,,|======#######|#;:##=OOO=====|,                 
                 .=====(======-,,\===\===/====|,,//===========,                 
                   |===(==========-..|-==/.../==============/,                  
                    \\=((=====OO====--\===================//,                   
                     \\==,====================OOO========//,                    
                       \\,===========OO================//,                      
                         =,============================,                        
                           ..\\==================//.                            
               `````          ...--------==----                                 
               `````
